--- a/styles/components/index.scss
+++ b/styles/components/index.scss
@@ -12,8 +12,8 @@
 // @use "graph-panel";
 // //输入框
 // @use "input";
-// //列表
-// @use "list";
+//列表
+@use "list";
 // //菜单
 // @use "menu";
 // //块引用窗口
