--- a/styles/dialog/_account.scss
+++ b/styles/dialog/_account.scss
@@ -42,10 +42,10 @@ $dialog-account-button-bg-hover: $rc-brand-light;
     }
 
     #activationCode {
-      font-size: 11px !important;
+      font-size: 11px ;
       padding: 1px 6px;
-      top: 4px !important;
-      right: 4px !important;
+      top: 4px ;
+      right: 4px ;
       color:  $rc-text-secondary;
       background-color: $rc-component-bg;
       height: 22px;
