--- a/styles/layout/index.scss
+++ b/styles/layout/index.scss
@@ -1,16 +1,19 @@
-@use "sass:map";
-@use "../common" as *;
-
 // 顶栏
 @use "top-bar";
 // 边栏
 @use "dock";
-// // 底栏
-// @use "status";
-// // 边窗
-// @use "wnd";
-// // 分割线
-// @use "resize";
+// 边窗
+@use "wnd";
+// 底栏
+@use "status";
+// 滚动条
+@use "scroller";
+// 顶栏
+@use "tab-bar";
+// 分割线
+@use "resize";
+//空白界面
+@use "empty";
 
 body.body--win32 {
   border: none;
