--- a/styles/protyle/block/_block-iframe.scss
+++ b/styles/protyle/block/_block-iframe.scss
@@ -10,8 +10,8 @@
 
         &,
         &::after {
-            background-color: $rc-border-1  !important;
-            box-shadow: unset !important;
+            background-color: $rc-border-1  ;
+            box-shadow: unset ;
 
 
         }
