--- a/styles/protyle/block/_block-img.scss
+++ b/styles/protyle/block/_block-img.scss
@@ -25,9 +25,9 @@
             height: 50px;
             display: block;
             opacity: 0;
-            box-shadow: unset !important;
+            box-shadow: unset ;
             transition: opacity 0.3s ease-out;
-            background-color: $rc-border-1  !important;
+            background-color: $rc-border-1  ;
 
         }
 
