--- a/styles/protyle/block/_block-kbd.scss
+++ b/styles/protyle/block/_block-kbd.scss
@@ -2,7 +2,7 @@ $kbd-border: $rc-border-3;
 $kbd-bg: $rc-component-bg;
 
 kbd {
-  font-family: var(--b3-font-family-code) !important;
-  border-color: $kbd-border !important;
-  background-color: $kbd-bg !important;
+  font-family: var(--b3-font-family-code) ;
+  border-color: $kbd-border ;
+  background-color: $kbd-bg ;
 }
