--- a/styles/components/_menu.scss
+++ b/styles/components/_menu.scss
@@ -38,11 +38,11 @@ $sub-menu-vertical: 10px;
   transition: $menu-transition;
 
   &.fn__none {
-    display: block !important;
+    display: block ;
     opacity: 0;
     transform: scale(0.97);
     padding: 0;
-    z-index: -99 !important;
+    z-index: -99 ;
   }
 
   > .b3-menu__item {
@@ -69,7 +69,7 @@ $sub-menu-vertical: 10px;
 
       &:hover,
       &.b3-menu__item--current {
-        background-color: transparent !important;
+        background-color: transparent ;
       }
     }
   }
@@ -123,7 +123,7 @@ $sub-menu-vertical: 10px;
 
         .b3-menu__label {
           span {
-            box-shadow: unset !important;
+            box-shadow: unset ;
             width: 22px;
             height: 22px;
             border: 1px solid $rc-border-3;
@@ -133,7 +133,7 @@ $sub-menu-vertical: 10px;
 
         // 鼠标选项
         &--current {
-          background-color: $menu-bg !important;
+          background-color: $menu-bg ;
 
           .b3-menu__label {
             span {
@@ -179,10 +179,10 @@ $sub-menu-vertical: 10px;
   &.b3-list--background {
     padding: 8px;
     margin: 0;
-    // overflow: overlay !important;
-    width: 550px !important;
+    // overflow: overlay ;
+    width: 550px ;
     .b3-text-field {
-      margin: 0 0 8px !important;
+      margin: 0 0 8px ;
     }
 
     .b3-list-item {
@@ -196,7 +196,7 @@ $sub-menu-vertical: 10px;
       &__meta {
         &:first-child {
           height: 20px;
-          line-height: 20px !important;
+          line-height: 20px ;
 
           .svg--small {
             @include graphic(20px, 11px);
@@ -206,13 +206,13 @@ $sub-menu-vertical: 10px;
 
       &__graphic,
       &__text {
-        color: $menu-item-color !important;
+        color: $menu-item-color ;
       }
 
       &--focus {
         .b3-list-item__graphic,
         .b3-list-item__text {
-          color: $rc-brand !important;
+          color: $rc-brand ;
         }
       }
     }
@@ -225,7 +225,7 @@ $sub-menu-vertical: 10px;
 
     // 添加文档标签菜单 输入框
     > .fn__flex-column > input {
-      margin: 2px !important;
+      margin: 2px ;
     }
 
     // 添加文档标签菜单 列表
@@ -249,9 +249,9 @@ $sub-menu-vertical: 10px;
     column-count: 4;
     column-gap: 16px;
     column-rule: 1px solid $rc-border-3;
-    max-height: none !important;
-    width: auto !important;
-    min-width: 200px !important;
+    max-height: none ;
+    width: auto ;
+    min-width: 200px ;
     margin: 0;
 
     > .emojis {
@@ -262,13 +262,13 @@ $sub-menu-vertical: 10px;
     .b3-list-item {
       .b3-list-item__meta,
       .b3-menu__accelerator {
-        color: $rc-text-placeholder !important;
+        color: $rc-text-placeholder ;
       }
 
       &.b3-list-item--focus {
         .b3-list-item__meta,
         .b3-menu__accelerator {
-          color: $brand-4 !important;
+          color: $brand-4 ;
         }
       }
     }
