--- a/styles/protyle/_protyle.scss
+++ b/styles/protyle/_protyle.scss
@@ -11,20 +11,20 @@ $pre-action-bg-focus: $rc-component-bg-select;
   .b3-typography,
   .protyle-wysiwyg {
     box-sizing: content-box;
-    padding: 16px #{$content-margin} 30vh !important;
+    padding: 16px #{$content-margin} 30vh ;
     max-width: #{$editor-width};
-    width: auto !important;
+    width: auto ;
     background-color: $protyle-bg;
 
     > div:not(.sb):not(.list):not(.table):not([data-type="NodeBlockQueryEmbed"]) {
-      padding-left: 2px !important;
-      padding-right: 2px !important;
+      padding-left: 2px ;
+      padding-right: 2px ;
     }
 
     [data-node-id][fold="1"]:not(.li):not([data-type="NodeHeading"]) {
       &.p {
-        height: auto !important;
-        line-height: 1.74 !important;
+        height: auto ;
+        line-height: 1.74 ;
       }
 
       &.list {
@@ -36,8 +36,8 @@ $pre-action-bg-focus: $rc-component-bg-select;
 
         .p {
           opacity: 0.68;
-          line-height: 1.625 !important;
-          font-size: 15px !important;
+          line-height: 1.625 ;
+          font-size: 15px ;
           &:first-child{
             height: calc(100% - 8px);
           }
@@ -97,28 +97,28 @@ $pre-action-bg-focus: $rc-component-bg-select;
       }
 
       &--current {
-        background-color: $pre-action-bg-focus !important;
+        background-color: $pre-action-bg-focus ;
 
         &:hover {
-          color: $rc-brand !important;
+          color: $rc-brand ;
         }
       }
     }
 
     .b3-typography {
-      max-width: #{$editor-width} !important;
+      max-width: #{$editor-width} ;
 
       &[style*="360px"] {
-        padding: 8px 16px !important;
-        width: 405px !important;
+        padding: 8px 16px ;
+        width: 405px ;
 
         margin: 0 auto;
       }
 
       &[style*="1024px"] {
-        padding: 8px 16px !important;
-        width: 1024px + 16px * 2 !important;
-        max-width: unset !important;
+        padding: 8px 16px ;
+        width: 1024px + 16px * 2 ;
+        max-width: unset ;
         margin: 0 auto;
       }
     }
@@ -128,7 +128,7 @@ $pre-action-bg-focus: $rc-component-bg-select;
   &.block__edit {
     .b3-typography,
     .protyle-wysiwyg {
-      padding: 16px #{$content-margin} !important;
+      padding: 16px #{$content-margin} ;
     }
 
     .def--mark {
@@ -145,7 +145,7 @@ $pre-action-bg-focus: $rc-component-bg-select;
 
 .protyle-wysiwyg--select,
 .protyle-wysiwyg--hl {
-  background-color: $highlight-bg !important;
+  background-color: $highlight-bg ;
 }
 
 .protyle-scroll {
