--- a/styles/protyle/block/_block-list.scss
+++ b/styles/protyle/block/_block-list.scss
@@ -34,19 +34,19 @@ $tag-done-color: $rc-text-disabled;
       // 解决单行子列表块表按钮显示问题
       >.list {
         padding-left: 0;
-        margin-left: 34px !important;
+        margin-left: 34px ;
         // transform: translateX(16px);
       }
 
       // 列表块子元素左侧线条
       .list::before {
-        border-color: $list-border  !important;
+        border-color: $list-border  ;
         left: -18px;
       }
 
       // 非列表块子元素左侧线条
       >[data-node-id]:before {
-        border-color: $list-border  !important;
+        border-color: $list-border  ;
       }
 
       // 有序列表按钮位置调整
@@ -57,7 +57,7 @@ $tag-done-color: $rc-text-disabled;
       // 列表按钮悬浮底色
       >.protyle-action {
         &:hover::after {
-          background-color: $list-point-bg-fold-hover  !important;
+          background-color: $list-point-bg-fold-hover  ;
         }
       }
     }
@@ -70,53 +70,53 @@ $tag-done-color: $rc-text-disabled;
 
   // color: $rc-text-primary;
   &::after {
-    background-color: $list-point-bg-fold  !important;
+    background-color: $list-point-bg-fold  ;
     // transform: translateX(0.5px);
   }
 
   &:hover::after {
-    background-color: $list-point-bg-fold-hover  !important;
+    background-color: $list-point-bg-fold-hover  ;
   }
 
   // 待办列表特殊情况
   &.protyle-action--task::after {
-    border-radius: unset !important;
+    border-radius: unset ;
   }
 }
 
 // 待办列表项完成后各子块的特殊样式
 .protyle-wysiwyg {
   .protyle-task--done * {
-    color: $list-done-color  !important;
-    border-color: $list-done-border-color  !important;
+    color: $list-done-color  ;
+    border-color: $list-done-border-color  ;
 
     //完成后的超链接样式
     &[data-node-id] span[data-type="a"]:not(:empty) {
-      color: $link-done-color  !important;
-      border-color: $link-done-border-color  !important;
+      color: $link-done-color  ;
+      border-color: $link-done-border-color  ;
 
       &::before {
-        opacity: $list-done-opacity  !important;
+        opacity: $list-done-opacity  ;
       }
 
       &:hover {
-        color: $link-done-color-hover  !important;
-        border-color: $link-done-border-color-hover  !important;
+        color: $link-done-color-hover  ;
+        border-color: $link-done-border-color-hover  ;
       }
     }
 
     // 完成后的块引用
     &[data-type="block-ref"] {
-      color: $ref-done-color  !important;
+      color: $ref-done-color  ;
 
       &:hover {
-        background-color: $ref-done-bg-hover  !important;
+        background-color: $ref-done-bg-hover  ;
       }
     }
 
     // 完成后的标签块
     &[data-type="tag"] {
-      color: $tag-done-color  !important;
+      color: $tag-done-color  ;
     }
 
     // 完成后的有样式子块
@@ -126,7 +126,7 @@ $tag-done-color: $rc-text-disabled;
 
     // 完成后的键盘块
     kbd {
-      border-color: $rc-border-4  !important;
+      border-color: $rc-border-4  ;
     }
 
     // 完成后的标记块
